--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -118,3 +118,27 @@
 .about-site-container h3, .widget h3 {
     font-weight: 500;
 }
+
+/* --- Estilos para o botão de Logout --- */
+.btn-logout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    background-color: #555;
+    border: none;
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.btn-logout:hover {
+    background-color: #FFAAAA; /* Cor de "perigo" para logout */
+}
+
+.btn-logout i {
+    color: white;
+}
